Terminando Pág. Inicial

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -114,7 +114,10 @@
 
             <div class="swiper-button-next" id="swiper-navBtn"></div>
             <div class="swiper-button-prev" id="swiper-navBtn"></div>
-            <div class="swiper-pagination"></div>
+            <div id="pagination">
+                <div class="swiper-pagination"></div>
+            </div>
+
         </div>
     </section>
     <!-- MAIN ======================================= -->
