--- a/html/index.html
+++ b/html/index.html
@@ -37,9 +37,6 @@
 
     <!-- MAIN ======================================= -->
     <section class="home" id="home">
-
-        <img src="../imgs/fundo.png" alt="">
-
         <!--
         <video autoplay muted loop>
             <source src="../videos/video.mp4" type="video/mp4">
@@ -47,9 +44,6 @@
         -->
 
         <div class="home-text">
-
-
-
             <div class="button">
                 <a href="produtos.html" target="_blank" class="btn">Produtos</a>
                 <a href="contato.html" target="_blank" class="btn2">Contato</a>
@@ -61,6 +55,18 @@
         </div>
     </section>
     <!-- MAIN ======================================= -->
+
+    <!--
+        <div class="hero-wrapper">
+            <div class="hero">
+                <figure>
+                    <video loop="loop" muted="muted" autoplay="autoplay">
+                        <source src="../videos/video.mp4" />
+                    </video>
+                </figure>
+            </div>
+        </div>
+    -->
 
     <!-- PRODUTOS =================================== -->
     <section class="portfolio" id="produtos">
