--- a/html/fingers.html
+++ b/html/fingers.html
@@ -20,7 +20,7 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
+        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
@@ -50,12 +50,12 @@
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="../imgs/fingers.png" alt="" class="card-img">
+                                <img src="../imgs/fingers.png" alt="Imagem do Produtos: Fingers" class="card-img">
                             </div>
                         </div>
 
                         <div class="card-content">
-                            <h2 class="name">Tulipa</h2>
+                            <h2 class="name">Fingers</h2>
 
                             <p class="description">Os Fingers Soft Grippers são garras robóticas flexíveis feitas de
                                 material hiperelástico, possuindo partes, os fingers, que se fecha quando pressurizados,
@@ -128,7 +128,8 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                        alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
             <div id="footer-icons">
