--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
+        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
@@ -27,6 +27,9 @@
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="noticias.html">Notícias</a></li>
             <li><a href="contato.html">Contato</a></li>
+            <li><a href="contato.html">Cookie</a></li>
+            <li><a href="contato.html">Política</a></li>
+            <li><a href="contato.html">Termos</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon">
@@ -36,7 +39,7 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section class="home" id="home">
+    <section class="section-index" id="home">
         <!--
         <video autoplay muted loop>
             <source src="../videos/video.mp4" type="video/mp4">
@@ -45,8 +48,8 @@
 
         <div class="home-text">
             <div class="button">
-                <a href="produtos.html" target="_blank" class="btn">Produtos</a>
-                <a href="contato.html" target="_blank" class="btn2">Contato</a>
+                <a href="produtos.html" class="btn">Produtos</a>
+                <a href="contato.html" class="btn2">Contato</a>
             </div>
 
             <div>
@@ -69,40 +72,38 @@
     -->
 
     <!-- PRODUTOS =================================== -->
-    <section class="portfolio" id="produtos">
+    <section class="section-index" id="produtos">
         <div class="main-texto">
             <h2>Nossos Produtos</h2>
         </div>
 
         <div class="produtos-content" onclick="location.href='../html/tulipa.html';">
             <div id="row1" class="row">
-                <img src="../imgs/tulipa.png" alt="Projeto de Site em HTML5 e CSS3.">
+                <img src="../imgs/tulipa.png" alt="Imagem do Produto: Tulipa">
                 <div class="layer">
                     <h5>Tulipa</h5>
                     <p>Saiba Mais</p>
-                    <a href="../html/tulipa.html" target="_blank"><i id="link-icon" class='bx bx-link-external'></i></a>
+                    <a href="../html/tulipa.html"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
 
         <div class="produtos-content2">
             <div id="row2" class="row" onclick="location.href='../html/fingers.html';">
-                <img src="../imgs/fingers.png" alt="Jogo C - Batalha Naval">
+                <img src="../imgs/fingers.png" alt="Imagem do Produto: Fingers">
                 <div class="layer">
                     <h5>Fingers</h5>
                     <p>Saiba Mais</p>
-                    <a href="../html/fingers.html" target="_blank"><i id="link-icon"
-                            class='bx bx-link-external'></i></a>
+                    <a href="../html/fingers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div id="row3" class="row" onclick="location.href='../html/flexgrippers.html';">
-                <img src="../imgs/flexgripper.png" alt="Jogo C - Batalha Naval">
+                <img src="../imgs/flexgripper.png" alt="Imagem do Produto: FlexGripper">
                 <div class="layer">
                     <h5>FlexGripper</h5>
                     <p>Saiba Mais</p>
-                    <a href="../html/flexgrippers.html" target="_blank"><i id="link-icon"
-                            class='bx bx-link-external'></i></a>
+                    <a href="../html/flexgrippers.html"><i id="link-icon" class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
@@ -114,7 +115,7 @@
         <p class="detalhes-p">Clique Abaixo</p>
 
         <div class="button2">
-            <a href="produtos.html" target="_blank" id="detalhes-button" class="btn">VER PRODUTOS</a>
+            <a href="produtos.html" id="detalhes-button" class="btn">VER PRODUTOS</a>
         </div>
     </div>
     <!-- PRODUTOS =================================== -->
@@ -160,7 +161,8 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                        alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
             <div id="footer-icons">
