--- a/html/produtos.html
+++ b/html/produtos.html
@@ -21,7 +21,7 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
+        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
@@ -47,12 +47,12 @@
         <div class="slide-container swiper">
             <div class="slide-content">
                 <div class="card-wrapper swiper-wrapper">
-                    <div class="card swiper-slide">
+                    <div class="card swiper-slide" onclick="location.href='../html/tulipa.html';">
                         <div class="image-content">
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="../imgs/tulipa.png" alt="" class="card-img">
+                                <img src="../imgs/tulipa.png" alt="Imagem do Produto: Tulipa" class="card-img">
                             </div>
                         </div>
 
@@ -63,17 +63,17 @@
                                 material hiperelástico com câmaras de ar pressurizáveis.</p>
 
                             <div class="div-button-produtos">
-                                <a href="tulipa.html" target="_blank" class="button-produtos">Veja Mais</a>
+                                <a href="tulipa.html" class="button-produtos">Veja Mais</a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="card swiper-slide">
+                    <div class="card swiper-slide" onclick="location.href='../html/fingers.html';">
                         <div class="image-content">
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="../imgs/fingers.png" alt="" class="card-img">
+                                <img src="../imgs/fingers.png" alt="Imagem do Produto: Fingers" class="card-img">
                             </div>
                         </div>
 
@@ -84,17 +84,18 @@
                                 material hiperelástico, possuindo partes, os fingers.</p>
 
                             <div class="div-button-produtos">
-                                <a href="fingers.html" target="_blank" class="button-produtos">Veja Mais</a>
+                                <a href="fingers.html" class="button-produtos">Veja Mais</a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="card swiper-slide">
+                    <div class="card swiper-slide" onclick="location.href='../html/flexgrippers.html';">
                         <div class="image-content">
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="../imgs/flexgripper.png" alt="" class="card-img">
+                                <img src="../imgs/flexgripper.png" alt="Imagem do Produto: FlexGripper"
+                                    class="card-img">
                             </div>
                         </div>
 
@@ -105,7 +106,7 @@
                                 de material hiperelástico com câmaras de ar pressurizáveis.</p>
 
                             <div class="div-button-produtos">
-                                <a href="flexgrippers.html" target="_blank" class="button-produtos">Veja Mais</a>
+                                <a href="flexgrippers.html" class="button-produtos">Veja Mais</a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +164,8 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                        alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
             <div id="footer-icons">
