--- a/html/tulipa.html
+++ b/html/tulipa.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
-    <link rel="stylesheet" href="../css/tulipa.css">
+    <link rel="stylesheet" href="../css/fingers.css">
     <link rel="stylesheet" href="../css/noticias.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
@@ -37,7 +37,7 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section id="tulipa" class="section-tulipa">
+    <section id="tulipa" class="section-fingers">
         <div class="div-h2-tulipa">
             <h2 id="h2-tulipa">Tulipa Soft Grippers</h2>
         </div>
@@ -57,19 +57,17 @@
                         <div class="card-content">
                             <h2 class="name">Tulipa</h2>
 
-                            <p class="description">As Tulipas Soft Grippers são garras robóticas complacentes fabricadas
-                                em material hiperelástico. Em seu interior, câmaras de ar podem ser pressurizadas
-                                pneumaticamente, diminuindo o diâmetro interno da garra, possibilitando a manipulação de
-                                peças de até Ø2mm. Possuindo um copo externo de material rígido. Sendo indicada para
-                                manipulação de peças de formas regulares e irregulares, como: garrafas, potes, frutas,
-                                entre outros produtos..</p>
+                            <p class="description">Os Fingers Soft Grippers são garras robóticas flexíveis feitas de
+                                material hiperelástico, possuindo partes, os fingers, que se fecha quando pressurizados,
+                                permitindo a manipulação de peças de formas regulares e irregulares, como pães,
+                                salsichas, frascos e outros produtos.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <section class="section-tulipa">
+        <section class="section-fingers-documentacao">
             <div class="div-h2-documentacao">
                 <h2 id="h2-documentacao">Baixe a Documentação</h2>
 
