--- a/html/contato.html
+++ b/html/contato.html
@@ -20,7 +20,7 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
+        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
@@ -97,7 +97,8 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                        alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
             <div id="footer-icons">
