--- a/html/flexgrippers.html
+++ b/html/flexgrippers.html
@@ -21,7 +21,7 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
+        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
@@ -51,7 +51,8 @@
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="../imgs/flexgripper.png" alt="" class="card-img">
+                                <img src="../imgs/flexgripper.png" alt="Imagem do Produtos: flexgripper"
+                                    class="card-img">
                             </div>
                         </div>
 
@@ -112,7 +113,8 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer"
+                        alt="Logo da Marca Soft Grippers Todo em Branco"></a>
             </div>
 
             <div id="footer-icons">
