--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
                 <a href="contato.html" class="btn2">Contato</a>
             </div>
 
-            <div>
+            <div class="container-seta">
                 <a href="#produtos"><i id="seta" class='bx bxs-chevron-down'></i></a>
             </div>
         </div>
@@ -193,6 +193,7 @@
     <!-- FOOTER ===================================== -->
 
     <script src="../js/script.js"></script>
+    <script src="../js/animacao-seta.js"></script>
 </body>
 
 </html>
