--- a/html/flexgrippers.html
+++ b/html/flexgrippers.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
-    <link rel="stylesheet" href="../css/index-produtos.css">
-    <link rel="stylesheet" href="../css/flexgrippers.css">
+    <link rel="stylesheet" href="../css/fingers.css">
     <link rel="stylesheet" href="../css/noticias.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
@@ -38,7 +37,7 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section id="tulipa" class="section-flexgripper">
+    <section id="tulipa" class="section-fingers">
         <div class="div-h2-tulipa">
             <h2 id="h2-tulipa">Flex Gripper Soft Grippers</h2>
         </div>
@@ -51,8 +50,7 @@
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="../imgs/flexgripper.png" alt="Imagem do Produtos: flexgripper"
-                                    class="card-img">
+                                <img src="../imgs/flexgripper.png" alt="Imagem do Produtos: Fingers" class="card-img">
                             </div>
                         </div>
 
@@ -69,6 +67,24 @@
                 </div>
             </div>
         </div>
+
+        <section class="section-fingers-documentacao">
+            <div class="div-h2-documentacao">
+                <h2 id="h2-documentacao">Baixe a Documentação</h2>
+
+                <p class="p-documentacao">Clique Abaixo</p>
+            </div>
+
+            <div class="div-baixar">
+                <div id="div-baixar2">
+                    <i id="pdf-baixar" class='bx bxs-file-pdf'></i>
+
+                    <p id="p-documentacao">flexgrippers.pdf</p>
+                </div>
+
+                <a href="../docs/flexgrippers.pdf" target="_blank"><i id="icon-baixar" class='bx bx-download'></i></a>
+            </div>
+        </section>
     </section>
     <!-- MAIN ======================================= -->
 
@@ -87,8 +103,6 @@
                         href="https://www.google.com/maps/place/R.+Bar%C3%A3o+de+Monte+Santo,+468+-+Mooca,+S%C3%A3o+Paulo+-+SP,+03123-020/data=!4m2!3m1!1s0x94ce595157bd39b5:0x9688a000e8295541?sa=X&ved=2ahUKEwjZuvLc4pX_AhWlxIsKHQ7cBZYQ8gF6BAgIEAI">
                         <p>Endereço - Rua Barão de Monte Santo, 468 CEP: 03123-020 - Mooca, São Paulo</p>
                     </a>
-
-                    <p>CNPJ - 35.688.484/0001-98</p>
                 </div>
             </div>
 
