--- a/html/sobre.html
+++ b/html/sobre.html
@@ -42,33 +42,40 @@
             <h2 id="h2-sobre">Sobre Nós</h2>
 
             <div class="texto-sobre">
-                <h4 id="h4-sobre">Lorem Ipsum</h4>
-                <p class="p-sobre">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus nemo laborum
-                    obcaecati omnis
-                    tempora
-                    reprehenderit cumque delectus dolores minima! Vero ipsam aliquid eveniet aspernatur assumenda
-                    accusamus
-                    eum neque, omnis hic.
+                <h4 id="h4-sobre">Soft Grippers</h4>
+                <p class="p-sobre">A Soft Grippers é uma empresa líder no campo da robótica mole no Brasil, que se
+                    dedica ao desenvolvimento de garras flexíveis para uma ampla variedade de aplicações.
                 </p>
 
-                <p class="p-sobre">Debitis illum voluptatum, asperiores placeat eum velit ea esse provident magni in
-                    quas repudiandae.
-                    Ipsam eos error fugiat labore voluptates nam temporibus, sit numquam nobis minus ex possimus quae
-                    fugit.
-                    Vero nesciunt odio, eveniet consectetur veniam repellendus modi explicabo minima temporibus eius sit
-                    id
-                    deleniti tempore esse minus, aut rerum at consequatur? Voluptatibus exercitationem deserunt, ipsum
-                    rem
-                    voluptatum dolore expedita.
-                    Voluptate, mollitia architecto! Odio pariatur quos nulla, quae in mollitia cum perspiciatis veniam
-                    facere, laborum voluptatem consectetur libero fugit fuga, magni iure quia optio recusandae quisquam
-                    laudantium quas commodi eos!
-                    Temporibus officia odio explicabo ea repellat odit ipsa dicta ipsum magni! Similique quas animi
-                    eligendi
-                    sapiente, cum deserunt incidunt molestiae, harum vero temporibus tenetur consequuntur veniam porro
-                    consequatur, aperiam quae!
+                <p class="p-sobre"> Fundada em
+                    2019, a empresa tem fornecido soluções inovadoras para os setores alimentício e farmacêutico, e está
+                    constantemente buscando novos desafios.
+                    Com uma equipe altamente qualificada e comprometida com a excelência, a Soft Grippers está
+                    constantemente aprimorando suas tecnologias e processos de fabricação para oferecer aos clientes as
+                    soluções mais avançadas e personalizadas do mercado. As garras complacentes da empresa são
+                    projetadas para serem flexíveis, seguras e precisas, tornando-se ideais para aplicações delicadas
+                    que exigem um alto grau de precisão e confiabilidade.
+                    Além disso, a Soft Grippers tem um compromisso com a responsabilidade social. A empresa mantém uma
+                    forte política de ética empresarial em todas as suas operações.
+                    Em resumo, a Soft Grippers é uma empresa altamente inovadora e comprometida com a excelência, que
+                    oferece soluções personalizadas para os desafios mais complexos da robótica mole. Se você busca
+                    qualidade, segurança e inovação em suas soluções de automação, a Soft Grippers é a escolha certa
+                    para você.
                 </p>
             </div>
+        </div>
+
+        <div id="container-icons">
+            <i id="icon-sobre" class='bx bxs-bullseye'></i>
+        </div>
+
+        <div>
+            <h4 id="h4-sobre">Missão</h4>
+
+            <p id="p-sobre" class="p-sobre">Nossa missão é fornecer soluções inovadoras e personalizadas no campo da
+                robótica mole, por meio do desenvolvimento de garras flexíveis de alta qualidade. Buscamos
+                constantemente superar os desafios tecnológicos e oferecer aos nossos clientes as melhores soluções para
+                suas necessidades específicas, com foco na excelência, segurança e confiabilidade..</p>
         </div>
 
         <div id="container-icons">
@@ -76,38 +83,50 @@
         </div>
 
         <div>
-            <h4 id="h4-sobre">Lorem Ipsum</h4>
+            <h4 id="h4-sobre">Visão</h4>
 
-            <p id="p-sobre" class="p-sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam repudiandae
-                totam, nesciunt maiores
-                voluptatibus tempora commodi corrupti minima aperiam assumenda, cupiditate at? Nisi recusandae corporis
-                distinctio eligendi, quisquam velit quasi.</p>
+            <p id="p-sobre" class="p-sobre">Nossa visão é ser reconhecidos como líderes no mercado de robótica mole no
+                Brasil, proporcionando soluções avançadas e personalizadas que impulsionem a automação em diversos
+                setores. Buscamos constantemente expandir nossa presença e fortalecer nossa reputação como fornecedores
+                confiáveis e inovadores, mantendo o foco na satisfação do cliente e no desenvolvimento contínuo de
+                tecnologias de ponta.</p>
         </div>
 
         <div id="container-icons">
-            <i id="icon-sobre" class='bx bxs-message-rounded-dots'></i>
+            <i id="icon-sobre" class='bx bxs-trophy'></i>
         </div>
 
         <div>
-            <h4 id="h4-sobre">Lorem Ipsum</h4>
+            <h4 id="h4-sobre">Valores</h4>
 
-            <p id="p-sobre" class="p-sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam repudiandae
-                totam, nesciunt maiores
-                voluptatibus tempora commodi corrupti minima aperiam assumenda, cupiditate at? Nisi recusandae corporis
-                distinctio eligendi, quisquam velit quasi.</p>
-        </div>
+            <p id="p-sobre" class="p-sobre">1. Inovação: Estamos comprometidos em promover a inovação em tudo o que
+                fazemos. Buscamos constantemente novas ideias, tecnologias e abordagens para oferecer soluções únicas e
+                eficazes aos nossos clientes.
 
-        <div id="container-icons">
-            <i id="icon-sobre" class='bx bx-support'></i>
-        </div>
+            <p id="p-sobre" class="p-sobre">
+                2. Qualidade: Acreditamos na entrega de produtos e serviços da mais alta qualidade. Nossas garras
+                flexíveis são projetadas e fabricadas com os mais altos padrões, garantindo desempenho superior,
+                durabilidade e confiabilidade.</p>
 
-        <div>
-            <h4 id="h4-sobre">Lorem Ipsum</h4>
+            <p id="p-sobre" class="p-sobre">
+                3. Responsabilidade social: Agimos de maneira ética e responsável em todas as nossas operações. Mantemos
+                uma postura de integridade, transparência e conformidade com as leis e regulamentos, contribuindo
+                positivamente para a sociedade e o meio ambiente.</p>
 
-            <p id="p-sobre" class="p-sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam repudiandae
-                totam, nesciunt maiores
-                voluptatibus tempora commodi corrupti minima aperiam assumenda, cupiditate at? Nisi recusandae corporis
-                distinctio eligendi, quisquam velit quasi.</p>
+            <p id="p-sobre" class="p-sobre">
+                4. Colaboração: Valorizamos o trabalho em equipe e a colaboração, tanto internamente como com nossos
+                clientes e parceiros. Acreditamos que a cooperação efetiva e o compartilhamento de conhecimento são
+                essenciais para alcançar resultados excepcionais.</p>
+
+            <p id="p-sobre" class="p-sobre">
+                5. Orientação ao cliente: Nosso foco principal é entender as necessidades e expectativas de nossos
+                clientes. Buscamos oferecer soluções personalizadas, fornecendo suporte técnico especializado e
+                garantindo a máxima satisfação do cliente em todos os aspectos de nosso trabalho.</p>
+
+            <p id="p-sobre" class="p-sobre">
+                Esses são nossos princípios fundamentais que nos guiam no desenvolvimento de garras flexíveis de
+                qualidade, proporcionando soluções inovadoras e confiáveis para nossos clientes.</p>
+            </p>
         </div>
     </section>
     <!-- MAIN ======================================= -->
