--- a/html/index.html
+++ b/html/index.html
@@ -161,16 +161,16 @@
             </div>
 
             <div id="footer-icons">
-                <a href=""><i id="icon-footer" class='bx bxl-linkedin'>
+                <a href="https://www.linkedin.com/company/soft-grippers/"><i id="icon-footer" class='bx bxl-linkedin'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-facebook'>
+                <a href="https://www.facebook.com/softgrippers"><i id="icon-footer" class='bx bxl-facebook'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-instagram'>
+                <a href="https://www.instagram.com/softgrippers/"><i id="icon-footer" class='bx bxl-instagram'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-youtube'>
+                <a href="https://www.youtube.com/@SoftGrippersBrasil"><i id="icon-footer" class='bx bxl-youtube'>
 
                     </i></a>
             </div>
