--- a/html/pos-noticia.html
+++ b/html/pos-noticia.html
@@ -57,6 +57,11 @@
             Foi um projeto que visou o desenvolvimento e aprimoramento da garra. Levando a do TRL (Technology readiness
             level) 1 ao TRL 9.</p>
 
+        <p class="post-description2">
+            Referência: <a href="https://www.ifsp.edu.br/noticias/1320-ifsp-celebra-primeiro-contrato-para-licenciamento-de-patente"
+                id="id-description">https://www.ifsp.edu.br/noticias/1320-ifsp-celebra-primeiro-contrato-para-licenciamento-de-patente</a>
+        </p>
+
         <h2 class="veja-tambem">Veja Também!</h2>
 
         <div class="post container-noticias">
@@ -79,6 +84,7 @@
                     (Technology
                     readiness level) 1 ao TRL 9.
                 </p>
+
             </div>
 
             <!-- post box 2 -->
@@ -165,16 +171,16 @@
             </div>
 
             <div id="footer-icons">
-                <a href=""><i id="icon-footer" class='bx bxl-linkedin'>
+                <a href="https://www.linkedin.com/company/soft-grippers/"><i id="icon-footer" class='bx bxl-linkedin'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-facebook'>
+                <a href="https://www.facebook.com/softgrippers"><i id="icon-footer" class='bx bxl-facebook'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-instagram'>
+                <a href="https://www.instagram.com/softgrippers/"><i id="icon-footer" class='bx bxl-instagram'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-youtube'>
+                <a href="https://www.youtube.com/@SoftGrippersBrasil"><i id="icon-footer" class='bx bxl-youtube'>
 
                     </i></a>
             </div>
