--- a/html/pos-noticia4.html
+++ b/html/pos-noticia4.html
@@ -80,6 +80,10 @@
             de julho.
         </p>
 
+        <p class="post-description2">
+            Referência: <a href="https://jornal.ufg.br/n/117612-robotica-mole-inovacao-tecnologias-e-possibilidades" id="id-description">https://jornal.ufg.br/n/117612-robotica-mole-inovacao-tecnologias-e-possibilidades</a>
+        </p>
+
         <h2 class="veja-tambem">Veja Também!</h2>
 
         <div class="post container-noticias">
@@ -187,16 +191,16 @@
             </div>
 
             <div id="footer-icons">
-                <a href=""><i id="icon-footer" class='bx bxl-linkedin'>
+                <a href="https://www.linkedin.com/company/soft-grippers/"><i id="icon-footer" class='bx bxl-linkedin'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-facebook'>
+                <a href="https://www.facebook.com/softgrippers"><i id="icon-footer" class='bx bxl-facebook'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-instagram'>
+                <a href="https://www.instagram.com/softgrippers/"><i id="icon-footer" class='bx bxl-instagram'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-youtube'>
+                <a href="https://www.youtube.com/@SoftGrippersBrasil"><i id="icon-footer" class='bx bxl-youtube'>
 
                     </i></a>
             </div>
