--- a/html/pos-noticia2.html
+++ b/html/pos-noticia2.html
@@ -57,6 +57,11 @@
             versatilidade deste dispositivo revolucionário, capaz de agarrar objetos delicados com extrema eficiência.
         </p>
 
+        <p class="post-description2">
+            Referência: <a href="https://drive.google.com/file/d/1ITVI-SN5FCdH0ztOlWbBFlraHCFqhsof/view"
+                id="id-description">https://drive.google.com/file/d/1ITVI-SN5FCdH0ztOlWbBFlraHCFqhsof/view</a>
+        </p>
+
         <h2 class="veja-tambem">Veja Também!</h2>
 
         <div class="post container-noticias">
@@ -164,16 +169,16 @@
             </div>
 
             <div id="footer-icons">
-                <a href=""><i id="icon-footer" class='bx bxl-linkedin'>
+                <a href="https://www.linkedin.com/company/soft-grippers/"><i id="icon-footer" class='bx bxl-linkedin'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-facebook'>
+                <a href="https://www.facebook.com/softgrippers"><i id="icon-footer" class='bx bxl-facebook'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-instagram'>
+                <a href="https://www.instagram.com/softgrippers/"><i id="icon-footer" class='bx bxl-instagram'>
 
                     </i></a>
-                <a href=""><i id="icon-footer" class='bx bxl-youtube'>
+                <a href="https://www.youtube.com/@SoftGrippersBrasil"><i id="icon-footer" class='bx bxl-youtube'>
 
                     </i></a>
             </div>
