--- a/html/pos-noticia.html
+++ b/html/pos-noticia.html
@@ -111,16 +111,16 @@
             <span class="share-title">Compartilhe este Artigo</span>
 
             <div id="post-icons">
-                <a href=""><i id="icon-post" class='bx bxl-linkedin'>
+                <a href=""><i id="icon-post" id="linkedin" class='bx bxl-linkedin'>
 
                     </i></a>
-                <a href=""><i id="icon-post" class='bx bxl-facebook'>
+                <a href=""><i id="icon-post" id="facebook" class='bx bxl-facebook'>
 
                     </i></a>
-                <a href=""><i id="icon-post" class='bx bxl-instagram'>
+                <a href=""><i id="icon-post" id="instagram" class='bx bxl-instagram'>
 
                     </i></a>
-                <a href=""><i id="icon-post" class='bx bxl-youtube'>
+                <a href=""><i id="icon-post" id="youtube" class='bx bxl-youtube'>
 
                     </i></a>
             </div>
