--- a/html/sobre.html
+++ b/html/sobre.html
@@ -99,29 +99,38 @@
         <div>
             <h4 id="h4-sobre">Valores</h4>
 
-            <p id="p-sobre" class="p-sobre">1. Inovação: Estamos comprometidos em promover a inovação em tudo o que
+            <p id="p-sobre" class="p-sobre"><strong>1. Inovação:</strong> Estamos comprometidos em promover a inovação
+                em tudo o que
                 fazemos. Buscamos constantemente novas ideias, tecnologias e abordagens para oferecer soluções únicas e
                 eficazes aos nossos clientes.
 
             <p id="p-sobre" class="p-sobre">
-                2. Qualidade: Acreditamos na entrega de produtos e serviços da mais alta qualidade. Nossas garras
+                <strong>2. Qualidade:</strong> Acreditamos na entrega de produtos e serviços da mais alta qualidade.
+                Nossas garras
                 flexíveis são projetadas e fabricadas com os mais altos padrões, garantindo desempenho superior,
-                durabilidade e confiabilidade.</p>
+                durabilidade e confiabilidade.
+            </p>
 
             <p id="p-sobre" class="p-sobre">
-                3. Responsabilidade social: Agimos de maneira ética e responsável em todas as nossas operações. Mantemos
+                <strong>3. Responsabilidade social:</strong> Agimos de maneira ética e responsável em todas as nossas
+                operações. Mantemos
                 uma postura de integridade, transparência e conformidade com as leis e regulamentos, contribuindo
-                positivamente para a sociedade e o meio ambiente.</p>
+                positivamente para a sociedade e o meio ambiente.
+            </p>
 
             <p id="p-sobre" class="p-sobre">
-                4. Colaboração: Valorizamos o trabalho em equipe e a colaboração, tanto internamente como com nossos
+                <strong>4. Colaboração:</strong> Valorizamos o trabalho em equipe e a colaboração, tanto internamente
+                como com nossos
                 clientes e parceiros. Acreditamos que a cooperação efetiva e o compartilhamento de conhecimento são
-                essenciais para alcançar resultados excepcionais.</p>
+                essenciais para alcançar resultados excepcionais.
+            </p>
 
             <p id="p-sobre" class="p-sobre">
-                5. Orientação ao cliente: Nosso foco principal é entender as necessidades e expectativas de nossos
+                <strong>5. Orientação ao cliente:</strong> Nosso foco principal é entender as necessidades e
+                expectativas de nossos
                 clientes. Buscamos oferecer soluções personalizadas, fornecendo suporte técnico especializado e
-                garantindo a máxima satisfação do cliente em todos os aspectos de nosso trabalho.</p>
+                garantindo a máxima satisfação do cliente em todos os aspectos de nosso trabalho.
+            </p>
 
             <p id="p-sobre" class="p-sobre">
                 Esses são nossos princípios fundamentais que nos guiam no desenvolvimento de garras flexíveis de
