--- a/html/noticias.html
+++ b/html/noticias.html
@@ -70,8 +70,8 @@
                 </p>
 
                 <div class="profile">
-                    <img src="../imgs/profile-1.jpg" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
-                    <span class="profile-name">Nome do Autor</span>
+                    <img src="../imgs/autor1.jpg" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
+                    <span class="profile-name">Alexandre Brincalepe Campo</span>
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
                 </p>
 
                 <div class="profile">
-                    <img src="../imgs/profile-2.jpg" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
+                    <img src="../imgs/user-icon.png" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
                     <span class="profile-name">Nome do Autor</span>
                 </div>
             </div>
@@ -118,8 +118,8 @@
                 </p>
 
                 <div class="profile">
-                    <img src="../imgs/profile-2.jpg" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
-                    <span class="profile-name">Nome do Autor</span>
+                    <img src="../imgs/autor3.jpg" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
+                    <span class="profile-name">T. J. Wallin (Referências)</span>
                 </div>
             </div>
 
@@ -143,8 +143,8 @@
                 </p>
 
                 <div class="profile">
-                    <img src="../imgs/profile-2.jpg" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
-                    <span class="profile-name">Nome do Autor</span>
+                    <img src="../imgs/user-icon.png" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
+                    <span class="profile-name">Sabrinna Coutinho</span>
                 </div>
             </div>
         </div>
