--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 
     <!-- HEADER ===================================== -->
     <header id="header">
-        <a href="index.html"><img src="../imgs/logo.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
+        <a href="index.html"><img src="../imgs/logo-preto.png" class="logo" alt="Logo da Marca Soft Grippers"></a>
 
         <ul class="navlist">
             <li><a href="index.html">Home</a></li>
