--- a/html/pos-noticia.html
+++ b/html/pos-noticia.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="../css/noticias.css">
     <link rel="stylesheet" href="../css/pos-noticias.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <title>Soft Grippers</title>
@@ -58,7 +61,8 @@
             level) 1 ao TRL 9.</p>
 
         <p class="post-description2">
-            Referência: <a href="https://www.ifsp.edu.br/noticias/1320-ifsp-celebra-primeiro-contrato-para-licenciamento-de-patente"
+            Referência: <a
+                href="https://www.ifsp.edu.br/noticias/1320-ifsp-celebra-primeiro-contrato-para-licenciamento-de-patente"
                 id="id-description">https://www.ifsp.edu.br/noticias/1320-ifsp-celebra-primeiro-contrato-para-licenciamento-de-patente</a>
         </p>
 
@@ -107,23 +111,26 @@
             </div>
         </div>
 
-        <div class="share post-contain">
-            <span class="share-title">Compartilhe este Artigo</span>
+        <div id="share-buttons">
 
-            <div id="post-icons">
-                <a href=""><i id="icon-post" id="linkedin" class='bx bxl-linkedin'>
+            <!-- facebook -->
+            <a class="facebook" target="blank"><i class="fab fa-facebook"></i></a>
 
-                    </i></a>
-                <a href=""><i id="icon-post" id="facebook" class='bx bxl-facebook'>
+            <!-- twitter -->
+            <a class="twitter" target="blank"><i class="fab fa-twitter"></i></a>
 
-                    </i></a>
-                <a href=""><i id="icon-post" id="instagram" class='bx bxl-instagram'>
+            <!-- linkedin -->
+            <a class="linkedin" target="blank"><i class="fab fa-linkedin"></i></a>
 
-                    </i></a>
-                <a href=""><i id="icon-post" id="youtube" class='bx bxl-youtube'>
+            <!-- reddit -->
+            <a class="reddit" target="blank"><i class="fab fa-reddit"></i></a>
 
-                    </i></a>
-            </div>
+            <!-- whatsapp-->
+            <a class="whatsapp" target="blank"><i class="fab fa-whatsapp"></i></a>
+
+            <!-- telegram-->
+            <a class="telegram" target="blank"><i class="fab fa-telegram"></i></a>
+
         </div>
     </section>
     <!-- MAIN ======================================= -->
@@ -200,6 +207,7 @@
 
     <script src="../js/script.js"></script>
     <script src="../js/noticias.js"></script>
+    <script src="../js/compartilhar.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js"
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </body>
