--- a/html/noticias.html
+++ b/html/noticias.html
@@ -93,7 +93,7 @@
 
                 <div class="profile">
                     <img src="../imgs/user-icon.png" class="profile-img" alt="Imagem de Perfil do Autor da Notícia">
-                    <span class="profile-name">Nome do Autor</span>
+                    <span class="profile-name">Sem Autor</span>
                 </div>
             </div>
 
