--- a/html/pos-noticia4.html
+++ b/html/pos-noticia4.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="../css/noticias.css">
     <link rel="stylesheet" href="../css/pos-noticias.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <title>Soft Grippers</title>
@@ -81,7 +84,8 @@
         </p>
 
         <p class="post-description2">
-            Referência: <a href="https://jornal.ufg.br/n/117612-robotica-mole-inovacao-tecnologias-e-possibilidades" id="id-description">https://jornal.ufg.br/n/117612-robotica-mole-inovacao-tecnologias-e-possibilidades</a>
+            Referência: <a href="https://jornal.ufg.br/n/117612-robotica-mole-inovacao-tecnologias-e-possibilidades"
+                id="id-description">https://jornal.ufg.br/n/117612-robotica-mole-inovacao-tecnologias-e-possibilidades</a>
         </p>
 
         <h2 class="veja-tambem">Veja Também!</h2>
@@ -127,22 +131,22 @@
             </div>
         </div>
 
-        <div class="share post-contain">
+        <div id="share-buttons">
             <span class="share-title">Compartilhe este Artigo</span>
 
-            <div id="post-icons">
-                <a href=""><i id="icon-post" class='bx bxl-linkedin'>
+            <div id="icons-share">
+                <!-- facebook -->
+                <a class="facebook" target="blank"><i class="fab fa-facebook"></i></a>
 
-                    </i></a>
-                <a href=""><i id="icon-post" class='bx bxl-facebook'>
+                <!-- twitter -->
+                <a class="twitter" target="blank"><i class="fab fa-twitter"></i></a>
 
-                    </i></a>
-                <a href=""><i id="icon-post" class='bx bxl-instagram'>
+                <!-- linkedin -->
+                <a class="linkedin" target="blank"><i class="fab fa-linkedin"></i></a>
 
-                    </i></a>
-                <a href=""><i id="icon-post" class='bx bxl-youtube'>
+                <!-- whatsapp-->
+                <a class="whatsapp" target="blank"><i class="fab fa-whatsapp"></i></a>
 
-                    </i></a>
             </div>
         </div>
     </section>
@@ -220,6 +224,7 @@
 
     <script src="../js/script.js"></script>
     <script src="../js/noticias.js"></script>
+    <script src="../js/compartilhar.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js"
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </body>
