--- a/html/index.html
+++ b/html/index.html
@@ -36,20 +36,21 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section class="section-index" id="home">
-        <!--
-        <video autoplay muted loop>
-            <source src="../videos/video.mp4" type="video/mp4">
-        </video>
-        -->
+    <section class="home" id="home">
+
+        <div class="container-video">
+            <video autoplay loop muted plays-inline class="background-clip">
+                <source src="../videos/video.mp4" type="video/mp4">
+            </video>
+        </div>
 
         <div class="home-text">
             <div class="button">
-                <a href="produtos.html" class="btn">Produtos</a>
-                <a href="contato.html" class="btn2">Contato</a>
+                <a href="produtos.html" target="_blank" class="btn">Produtos</a>
+                <a href="contato.html" target="_blank" class="btn2">Contato</a>
             </div>
 
-            <div class="container-seta">
+            <div>
                 <a href="#produtos"><i id="seta" class='bx bxs-chevron-down'></i></a>
             </div>
         </div>
