--- a/html/flexgrippers.html
+++ b/html/flexgrippers.html
@@ -162,7 +162,7 @@
             <h2 id="h2-footer3">Todos os Direitos Reservados</h2>
 
             <ul class="navlist-footer3">
-                <a href="https://www.linkedin.com/in/nicholas-gerade-b21a8019b/">Desenvolvido por Nicholas Gerade</a>
+                <a href="https://api.whatsapp.com/send?phone=5511992889443">Desenvolvido por Nicholas Gerade</a>
             </ul>
         </div>
     </section>
